package ca.ulaval.glo4002.game.domain.actions;

public enum Command {
    ADD,
    ADD_DINO
}
