@startuml

title __ACTIONS's Class Diagram__\n

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.actions {
        abstract class ca.ulaval.glo4002.game.domain.actions.Action {
            - id : UUID
            - object : Object
            - objectRepository : Object
            + Action()
            {abstract} + execute()
            + getId()
            + getObject()
            + getObjectRepository()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.actions {
        class ca.ulaval.glo4002.game.domain.actions.ActionFactory {
            + create()
            + create()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.actions {
        interface ca.ulaval.glo4002.game.domain.actions.ActionRepository {
            {abstract} + execute()
            {abstract} + getWaitingActions()
            {abstract} + reset()
            {abstract} + save()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.actions {
        class ca.ulaval.glo4002.game.domain.actions.AddDino {
            + AddDino()
            + execute()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.actions {
        class ca.ulaval.glo4002.game.domain.actions.AddResource {
            + AddResource()
            + execute()
        }
      }
    }
  }
  

  namespace  {
    namespace a.ulaval.glo4002.game {
      namespace domain.actions {
        enum Command {
          ADD
          ADD_DINO
        }
      }
    }
  }

  

  ca.ulaval.glo4002.game.domain.actions.AddDino -up-|> ca.ulaval.glo4002.game.domain.actions.Action
  ca.ulaval.glo4002.game.domain.actions.AddResource -up-|> ca.ulaval.glo4002.game.domain.actions.Action

right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
